@@ -231,6 +231,51 @@
       </h2>
       <blockquote class="SectionBox" id="_Members">
         <h3>
+          <a href="javascript:toggle_display('Public Properties')">
+            <span id="Public Properties:toggle">⊟</span> Public Properties</a>
+        </h3>
+        <blockquote id="Public Properties">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td>
+                  <b>
+                    <a href="#P:Mono.DocTest.Widget.IMenuItem.B">B</a>
+                  </b>
+                </td>
+                <td>
+                  <i>
+                    <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a>
+                  </i>. <span class="NotEntered">Documentation for this section has not yet been entered.</span></td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
+          <a href="javascript:toggle_display('Public Methods')">
+            <span id="Public Methods:toggle">⊟</span> Public Methods</a>
+        </h3>
+        <blockquote id="Public Methods">
+          <div class="SubsectionBox">
+            <table class="TypeMembers">
+              <tr valign="top">
+                <td>
+                  <div>
+                  </div>
+                </td>
+                <td colspan="2">
+                  <b>
+                    <a href="#M:Mono.DocTest.Widget.IMenuItem.A">A</a>
+                  </b>()<blockquote><span class="NotEntered">Documentation for this section has not yet been entered.</span></blockquote></td>
+              </tr>
+            </table>
+          </div>
+        </blockquote>
+        <h3>
           <a href="javascript:toggle_display('Extension Methods')">
             <span id="Extension Methods:toggle">⊟</span> Extension Methods</a>
         </h3>
@@ -257,6 +302,59 @@
           <span id="_MemberDetails:toggle">⊟</span> Member Details</a>
       </h2>
       <blockquote class="SectionBox" id="_MemberDetails">
+        <h3 id="M:Mono.DocTest.Widget.IMenuItem.A">
+          <a href="javascript:toggle_display('M:Mono.DocTest.Widget.IMenuItem.A:member')">
+            <span id="M:Mono.DocTest.Widget.IMenuItem.A:member:toggle">⊟</span> A Method</a>
+        </h3>
+        <blockquote id="M:Mono.DocTest.Widget.IMenuItem.A:member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Void">void</a> <b>A</b> ()</div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.Widget.IMenuItem.A:Remarks')">
+              <span id="M:Mono.DocTest.Widget.IMenuItem.A:Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.IMenuItem.A:Remarks">
+            <tt>M:Mono.DocTest.Widget.IMenuItem.A</tt>.</blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('M:Mono.DocTest.Widget.IMenuItem.A:Version Information')">
+              <span id="M:Mono.DocTest.Widget.IMenuItem.A:Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="M:Mono.DocTest.Widget.IMenuItem.A:Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
+        <h3 id="P:Mono.DocTest.Widget.IMenuItem.B">
+          <a href="javascript:toggle_display('P:Mono.DocTest.Widget.IMenuItem.B:member')">
+            <span id="P:Mono.DocTest.Widget.IMenuItem.B:member:toggle">⊟</span> B Property</a>
+        </h3>
+        <blockquote id="P:Mono.DocTest.Widget.IMenuItem.B:member">
+          <p class="Summary">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </p>
+          <div class="Signature">public <a href="http://www.go-mono.com/docs/monodoc.ashx?link=T:System.Int32">int</a> <b>B</b>  { set; get; }</div>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('P:Mono.DocTest.Widget.IMenuItem.B:Value')">
+              <span id="P:Mono.DocTest.Widget.IMenuItem.B:Value:toggle">⊟</span> Value</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.IMenuItem.B:Value">
+            <span class="NotEntered">Documentation for this section has not yet been entered.</span>
+          </blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('P:Mono.DocTest.Widget.IMenuItem.B:Remarks')">
+              <span id="P:Mono.DocTest.Widget.IMenuItem.B:Remarks:toggle">⊟</span> Remarks</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.IMenuItem.B:Remarks">
+            <tt>P:Mono.DocTest.Widget.IMenuItem.P</tt>.</blockquote>
+          <h4 class="Subsection">
+            <a href="javascript:toggle_display('P:Mono.DocTest.Widget.IMenuItem.B:Version Information')">
+              <span id="P:Mono.DocTest.Widget.IMenuItem.B:Version Information:toggle">⊟</span> Requirements</a>
+          </h4>
+          <blockquote class="SubsectionBox" id="P:Mono.DocTest.Widget.IMenuItem.B:Version Information">
+            <b>Namespace: </b>Mono.DocTest<br /><b>Assembly: </b>DocTest (in DocTest.dll)<br /><b>Assembly Versions: </b>0.0.0.0</blockquote>
+          <hr size="1" />
+        </blockquote>
       </blockquote>
     </div>
     <hr size="1" />
